# robot_arm_personal_2026S

./: .gitignore  CMakeLists.txt  README.md  run_sim.sh
config/: piper_arm.yaml
data/fig/: summary.txt
doc/report/: .gitignore  .latexmkrc  README.md  main.tex
doc/report/bibliography/: reference.bib
doc/report/sections/: chapter_01.tex  chapter_02.tex  chapter_03.tex  chapter_04.tex  chapter_05.tex  chapter_06.tex
include/arm/: disturbance.hpp  friction.hpp  sensor.hpp  types.hpp
include/arm/controller/: pd_controller.hpp
include/arm/observer/: dob.hpp  force_observer.hpp  momentum_observer.hpp  observer_base.hpp
include/controller/: arm_pd.hpp
include/drone/: imu.hpp  trajectory.hpp  utils.hpp
include/drone/controller/: controller_base.hpp  mpc.hpp  pid.hpp
include/drone/estimator/: cf.hpp  ekf.hpp  estimator_base.hpp
include/robot_arm/: joint_noise.hpp  state.hpp
model/: piper_scene.xml  piper_torque.xml  piper_torque_scene.xml
scripts/: analyze_3d_trajectory.py  analyze_log.py  plot_kalman.py  plot_trajectory.py
sim/: mujoco_env.cpp  mujoco_env.hpp  sensor_bridge.cpp  sensor_bridge.hpp  visualizer.cpp  visualizer.hpp
src/: arm_main.cpp  disturbance.cpp  friction.cpp  main.cpp  sensor.cpp  trajectory.cpp
src/controller/: arm_pd.cpp  mpc.cpp  pd_controller.cpp  pid.cpp
src/estimator/: cf.cpp  ekf.cpp
src/imu/: imu.cpp  imu_noise.cpp
src/observer/: dob.cpp  force_observer.cpp  momentum_observer.cpp
test/controller/: test_controller.cpp
test/estimator/: test_estimator.cpp
test/imu/: test_imu.cpp
test/trajectory/: test_trajectory.cpp
